[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/menu/passenger/WaitingPassengerGroup.gd" type="Script" id=1]
[ext_resource path="res://scenes/menu/shipyard/LabeledField.tscn" type="PackedScene" id=2]
[ext_resource path="res://styleboxes/selectable_unselected.tres" type="StyleBox" id=3]

[node name="WaitingPassengerGroup" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1814.0
margin_bottom = -1020.0
custom_styles/panel = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 3.0
margin_top = 5.0
margin_right = 103.0
margin_bottom = 55.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 9.0
margin_right = 100.0
margin_bottom = 23.0

[node name="DestinationField" parent="VBoxContainer/CenterContainer" instance=ExtResource( 2 )]
margin_left = 11.0
margin_right = 88.0
margin_bottom = 14.0
field_name = " Destination"

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
margin_top = 27.0
margin_right = 100.0
margin_bottom = 41.0

[node name="QuantityField" parent="VBoxContainer/CenterContainer2" instance=ExtResource( 2 )]
margin_left = 11.0
margin_right = 88.0
margin_bottom = 14.0
field_name = "Passengers Waiting"
